Update: Add adaptive css
- Create: media.css
- Create: header-phone.png

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./media.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gent Code</title>
@@ -18,6 +19,7 @@
         <ul class="nav__links">
             <li class="nav__link"><a href="#header" title="Перейти на главную страницу">Главная</a></li>
             <li class="nav__link"><a href="#about" title="Узнать о нас">О нас</a></li>
+            <li class="nav__link"><a href="#about" title="Узнать как с нами связаться">Контакты</a></li>
             <li class="nav__link"><a href="#price" title="Посмотреть прайс-лист">Прайс-лист</a></li>
             <li class="nav__link"><a href="#portfolio" title="Посмотреть портфолио">Портфолио</a></li>
             <li class="nav__link"><a href="#address" title="Узнать где мы находимся">Где мы находимся</a></li>
@@ -241,7 +243,7 @@
     </section>
 
     <footer class="footer">
-        <div class="footer__inner">
+        <div class="footer__wrapper">
             <div class="footer__brand logo">
                 <i class="fa-solid fa-scissors"></i>
                 <a href="#">Gent Code</a>
@@ -255,7 +257,7 @@
                 <div class="footer__links-group">
                     <a href="#portfolio">Портфолио</a>
                     <a href="#address">Где мы находимся</a>
-                    <a href="#contacts">Контакты</a>
+                    <a href="#about">Контакты</a>
                 </div>
             </div>
             <div class="footer__socials">
